--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -5,6 +5,7 @@ html
     title= title
     link(rel='stylesheet', href='/bootstrap/css/amelia.bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    <link rel="shortcut icon" href="">
   body
     .navbar.navbar-default.navbar-fixed-top
       .container
