Completed API Integation

--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -5,9 +5,8 @@ html
     title= title
     link(rel='stylesheet', href='/bootstrap/css/amelia.bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    <link rel="shortcut icon" href="">
   body
-    .navbar.navbar-default.navbar-fixed-top
+   .navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
           a.navbar-brand(href='/') Loc8r
@@ -26,7 +25,8 @@ html
       footer
         .row
           .col-xs-12
-            small &copy; Girish Godage 2018
+            small &copy; Simon Holmes 2014
 
     script(src='/javascripts/jquery-1.11.1.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
+    script(src='/javascripts/validation.js')
