--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html
+html(ng-app="loc8rApp")
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
@@ -25,8 +25,13 @@ html
       footer
         .row
           .col-xs-12
-            small &copy; Simon Holmes 2014
+            small &copy; Girish Godage 2018
 
+
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.js')     
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-route.js')
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.js')
+    script(src='/angular/loc8rApp.js')
     script(src='/javascripts/jquery-1.11.1.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='/javascripts/validation.js')
